# vedirect_dump

./: README.md  pyproject.toml
src/vedirect/: __main__.py
src/vedirect_dump/: __init__.py  __main__.py
