[project]
name = "vedirect_dump"
version = "2026.02.1"
description = "Victron VE.Direct information dump"
authors = [
    {name = "Artur Sterz", email = "sterz@trackit.systems"},
    {name = "Jonas Höchst", email = "hoechst@trackit.systems"},
]
dependencies = [
    "vedirect-m8>=1.3.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
vedirect_dump = "vedirect_dump.__main__:cli"

[tool.pdm]
distribution = true
